<resources>
    <string name="app_name">Bla Bla Wild</string>
    <string name="action_settings">Settings</string>
    <string name="search_text">Rechercher</string>
    <string name="proposer">Proposer un trajet</string>
    <string name="depart">Départ</string>
    <string name="destination">Destination</string>
    <string name="prix">Prix</string>
    <string name="date">Date</string>
    <string name="renseigner">Merci de renseigner un départ et une destination.</string>
    <string name="renseignerPrix">Merci de renseigner un départ, une destination, ainsi qu\'un prix.</string>
    <string name="itineraireOK">Itinéraire enregistré !</string>
    <string name="rechercheraccueil">Rechercher un itinéraire.</string>
    <string name="fleches">»</string>
    <string name="felicitations">Félicitations tu vas t\'échapper de</string>
    <string name="le">le</string>
    <string name="valider">Valider</string>
    <string name="Meconnecter">Me connecter // Mon profil</string>
    <string name="CreationCompte">Creation de compte</string>
    <string name="entrerEmail">Saisir votre email</string>
    <string name="entrerPassword">Saisir votre mot de passe</string>
    <string name="signUp">Creer mon compte</string>
    <string name="already">Deja enregistré, connectez vous ici.</string>
    <string name="unregistered">Pas encore enregistré ? crée un compte ici.</string>
    <string name="userlogin">Connecte toi</string>
    <string name="signIn">Connexion</string>
    <string name="accueil">Accueil</string>


</resources>
