<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search_itinerary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="wildsas.blablawild.SearchItineraryActivity">

    <TextView
        android:text="@string/depart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="19dp"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="16dp"
        android:id="@+id/editTextSearchDeparture"
        android:inputType="textCapWords"/>

    <TextView
        android:text="@string/destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextSearchDeparture"
        android:layout_alignLeft="@+id/editTextSearchDeparture"
        android:layout_alignStart="@+id/editTextSearchDeparture"
        android:layout_marginTop="11dp"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:ems="10"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="11dp"
        android:id="@+id/editTextSearchDestination" />

    <TextView
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextSearchDestination"
        android:layout_alignLeft="@+id/editTextSearchDestination"
        android:layout_alignStart="@+id/editTextSearchDestination"
        android:id="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView3"
        android:layout_alignRight="@+id/editTextSearchDestination"
        android:layout_alignEnd="@+id/editTextSearchDestination"
        android:layout_marginTop="13dp"
        android:id="@+id/editTextSearchDate"
        android:focusable="false"/>

    <Button
        android:text="@string/search_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextSearchDate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:id="@+id/button" />
</RelativeLayout>
